Fixed last css styling. Both shift click and click is now cyan highlighted. CreateBookmark radius removed. Right panel now always fully extended. Minimap resizable canvas.

--- a/src/main/resources/Bookmark.css
+++ b/src/main/resources/Bookmark.css
@@ -57,7 +57,7 @@
 }
 
 .titled-pane > .title {
-    -fx-background-color: gray;
+    -fx-background-color: darkgray;
     -fx-border-color: #e2e2e2;
     -fx-border-width: 1;
     -fx-border-radius: 8,7,6;
